JSW Devsb/src/objects/MRM_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Depot_Actuals__c</fullName>
        <label>Depot Actuals</label>
        <summarizedField>District_Actuals__c.Depot_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Depot_Target__c</fullName>
        <label>Depot Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Actuals__c</fullName>
        <label>Direct Actuals</label>
        <summarizedField>District_Actuals__c.Direct_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_Target__c</fullName>
        <label>Direct Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipName>District_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Month_Depot_Actuals__c</fullName>
        <label>Last Month Depot Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Direct_Actuals__c</fullName>
        <label>Last Month Direct Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_NSR_Qty_Actuals__c</fullName>
        <label>Last Month NSR Qty Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_NSR_Value_Actuals__c</fullName>
        <label>Last Month NSR Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Non_Trade_Actuals__c</fullName>
        <label>Last Month Non Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Rail_Actuals__c</fullName>
        <label>Last Month Rail Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Road_Actuals__c</fullName>
        <label>Last Month Road Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Trade_Actuals__c</fullName>
        <label>Last Month Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MH_Code__c</fullName>
        <formula>District_Code__c  +&apos;:&apos;+ TEXT(Product__c) +&apos;:&apos;+ TEXT(Month__c) +&apos;:&apos;+ Year__c +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MH Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Unique_Code__c</fullName>
        <formula>District__r.Name +&apos;:&apos;+ TEXT(Product__c) +&apos;:&apos;+ TEXT(Month__c) +&apos;:&apos;+ Year__c +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MH Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSR_Overall_QTY_Actuals__c</fullName>
        <label>NSR Overall QTY Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Overall_Value_Actuals__c</fullName>
        <label>NSR Overall Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_QTY__c</fullName>
        <label>NSR QTY</label>
        <summarizedField>District_Actuals__c.NSR_Qty_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Target__c</fullName>
        <label>NSR Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Total_Basic_Price__c</fullName>
        <label>NSR Total Basic Price</label>
        <summarizedField>District_Actuals__c.NSR_Total_Basic_Price_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Actuals__c</fullName>
        <label>Non Trade Actuals</label>
        <summarizedField>District_Actuals__c.Non_Trade_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Target__c</fullName>
        <label>Non Trade Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rail_Actuals__c</fullName>
        <label>Rail Actuals</label>
        <summarizedField>District_Actuals__c.District_Rail_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rail_Target__c</fullName>
        <label>Rail Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Road_Actuals__c</fullName>
        <label>Road Actuals</label>
        <summarizedField>District_Actuals__c.District_Road_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Road_Target__c</fullName>
        <label>Road Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>MRM Targets</relationshipLabel>
        <relationshipName>MRM_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Actuals__c</fullName>
        <label>Trade Actuals</label>
        <summarizedField>District_Actuals__c.Trade_Actuals__c</summarizedField>
        <summaryForeignKey>District_Actuals__c.District_Actuals__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_Target__c</fullName>
        <label>Trade Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Code_Last_Month__c</fullName>
        <formula>Sales_Office__c +&apos;:&apos;+ TEXT(Product__c) +&apos;:&apos;+  
CASE(TEXT(Month__c), 
&quot;January&quot;, &quot;December&quot;, 
&quot;February&quot;, &quot;January&quot;,
&quot;March&quot;,&quot;February&quot;,
&quot;April&quot;,&quot;March&quot;,
&quot;May&quot;,&quot;April&quot;,
&quot;June&quot;,&quot;May&quot;,
&quot;July&quot;,&quot;June&quot;,
&quot;August&quot;,&quot;July&quot;,
&quot;September&quot;,&quot;August&quot;,
&quot;October&quot;,&quot;September&quot;,
&quot;November&quot;,&quot;October&quot;,
&quot;December&quot;,&quot;November&quot;,
&quot;none&quot; )+&apos;:&apos;+ IF(TEXT(Month__c)=&apos;January&apos;,TEXT(VALUE(Year__c)-1),Year__c) +&apos;:&apos;+ Plant__c</formula>
        <label>Unique Code Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Code_Next_Month__c</fullName>
        <formula>Sales_Office__c +&apos;:&apos;+ TEXT(Product__c) +&apos;:&apos;+  
CASE(TEXT(Month__c), 
&quot;January&quot;, &quot;February&quot;, 
&quot;February&quot;, &quot;March&quot;,
&quot;March&quot;,&quot;April&quot;,
&quot;April&quot;,&quot;May&quot;,
&quot;May&quot;,&quot;June&quot;,
&quot;June&quot;,&quot;July&quot;,
&quot;July&quot;,&quot;August&quot;,
&quot;August&quot;,&quot;September&quot;,
&quot;September&quot;,&quot;October&quot;,
&quot;October&quot;,&quot;November&quot;,
&quot;November&quot;,&quot;December&quot;,
&quot;December&quot;,&quot;January&quot;,
&quot;none&quot; )+&apos;:&apos;+ IF(TEXT(Month__c)=&apos;December&apos;,TEXT(VALUE(Year__c)+1),Year__c) +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code Next Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <formula>Sales_Office__c +&apos;:&apos;+ TEXT(Product__c) +&apos;:&apos;+ TEXT(Month__c) +&apos;:&apos;+ Year__c +&apos;:&apos;+  Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MRM Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRM-{0000000000}</displayFormat>
        <label>MRM Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRM Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>